# PyPhisher

./: LICENSE  README.md  pyphisher.py
files/: Dockerfile  pyproject.toml
